fix(colorpicker): update spacing vars

--- a/packages/core/src/components/ColorPicker/src/index.css
+++ b/packages/core/src/components/ColorPicker/src/index.css
@@ -54,7 +54,7 @@
 [data-scope='color-picker'][data-part='label'] {
   font-size: var(--text-sm);
   display: block;
-  margin-bottom: calc(2 * var(--spacing));
+  margin-bottom: var(--spacing-2);
 }
 
 [data-scope='color-picker'][data-part='label'][data-disabled] {
@@ -68,14 +68,14 @@
 [data-scope='color-picker'][data-part='control'] {
   display: flex;
   align-items: flex-start;
-  gap: calc(2 * var(--spacing));
+  gap: var(--spacing-2);
 }
 
 [data-scope='color-picker'][data-part='control'] > *:has(> [data-part='trigger']) {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: var(--spacing);
+  padding: var(--spacing-1);
   background: var(--colors-bg-subtle);
   border-width: 1px;
 }
@@ -94,8 +94,8 @@
 }
 
 [data-scope='color-picker'][data-part='swatch'] {
-  width: calc(5 * var(--spacing));
-  height: calc(5 * var(--spacing));
+  width: var(--spacing-5);
+  height: var(--spacing-5);
   flex-shrink: 0;
 }
 
@@ -103,14 +103,14 @@ div:has(> [data-scope='color-picker'][data-part='channel-input'] ~ span) {
   display: flex;
   align-items: center;
   flex-direction: column;
-  gap: calc(2 * var(--spacing));
+  gap: var(--spacing-2);
 }
 
 [data-scope='color-picker'][data-part='channel-input'] {
   border-radius: 4px;
   width: 100%;
   border-width: 1px;
-  padding-inline: calc(2 * var(--spacing));
+  padding-inline: var(--spacing-2);
   background: var(--colors-bg-subtle);
   font-size: var(--text-sm);
   min-height: 32px;
@@ -130,7 +130,7 @@ div:has(> [data-scope='color-picker'][data-part='channel-input'] ~ span) {
 [data-scope='color-picker'][data-part='content'] {
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1), 0 1px 2px 0 rgba(0, 0, 0, 0.06);
   isolation: isolate;
-  padding: calc(4 * var(--spacing));
+  padding: var(--spacing-4);
   background: var(--colors-bg-subtle);
 }
 
@@ -138,13 +138,13 @@ div:has(> [data-scope='color-picker'][data-part='channel-input'] ~ span) {
   ~ div:not(:nth-child(2)):not([data-part='swatch-group']) {
   display: flex;
   width: 100%;
-  gap: calc(0.5 * var(--spacing));
+  gap: var(--spacing-0-5);
 }
 
 [data-scope='color-picker'][data-part='content'] > div {
   display: flex;
   flex-direction: column;
-  gap: calc(2 * var(--spacing));
+  gap: var(--spacing-2);
 }
 
 [data-scope='color-picker'][data-part='area'] {
@@ -170,19 +170,19 @@ div:has(> [data-scope='color-picker'][data-part='channel-input'] ~ span) {
 
 [data-scope='color-picker'][data-part='area'] + div {
   display: flex;
-  gap: calc(5 * var(--spacing));
-  margin-block: calc(2 * var(--spacing));
+  gap: var(--spacing-5);
+  margin-block: var(--spacing-2);
 }
 
 [data-scope='color-picker'][data-part='area'] + div > div {
   display: flex;
   flex-direction: column;
-  gap: calc(2 * var(--spacing));
+  gap: var(--spacing-2);
   flex: 1;
 }
 
 [data-scope='color-picker'][data-part='channel-slider-track'] {
-  height: calc(3 * var(--spacing));
+  height: var(--spacing-3);
   border-radius: 4px;
 }
 
@@ -204,7 +204,7 @@ hr:has(+ [data-scope='color-picker'][data-part='swatch-group']) {
 
 [data-scope='color-picker'][data-part='swatch-group'] {
   display: flex;
-  gap: calc(2.5 * var(--spacing));
+  gap: var(--spacing-2-5);
 }
 
 [data-scope='color-picker'][data-part='swatch-trigger'] > div {
